--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
 		"webRequest",
 		"webRequestBlocking",
 		"*://reddit.com/*",
-		"*://www.reddit.com/*"
+		"*://www.reddit.com/*",
+		"*://redd.it/*"
 	],
 	"background": {
 		"scripts": ["redirector.js"]
